--- a/slides/mass_notes.html
+++ b/slides/mass_notes.html
@@ -46,14 +46,38 @@
 <script src="../../reveal.js-plugins/audio-slideshow/recorder.js"></script>
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
-
 <section>
-<section id="slide-org037d22f">
-<h2 id="org037d22f">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org10d7a60">
+<h2 id="org10d7a60">Navigation instructions</h2>
+<ul>
+<li>Press <i class="fa fa-bars"></i> at the bottom
+left corner of the page to open a menu.
+<ul>
+<li>Jump to any slide within this presentation to clicking its title.</li>
+<li>Press <i class="fa fa-external-link-alt"></i> to
+navigate to another presentation.</li>
+
+</ul></li>
+<li>Press <a class="hide-on-pdf" onclick="document.location =
+  '?print-pdf';" id="PrintButton"><i class="fa fa-print"></i></a> to
+"print" a *.pdf of the presentation.</li>
+<li>Press <a onclick="showCaptions()" id="PrintButton"><i class="fa fa-closed-captioning"></i></a>
+to open a written transcript of the audio in the slides.</li>
+<li>Press the <code>SPACE</code> key to progress forward in the presentation.</li>
+<li>Use the <code>UP</code> / <code>DOWN</code> / <code>LEFT</code> / <code>RIGHT</code> arrow keys or the arrows in
+the bottom right corner of the page to navigate the presentation.</li>
+
+</ul>
+
+
+
+</section>
+</section>
+<section>
+<section id="slide-org994a39d" data-audio-src="mass/title.ogg">
+<h2 id="org994a39d">CP213: Applied mathematics and problem solving</h2>
 <h2>Mass and species balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
-
-<p class="fragment" data-audio-src="mass/title.ogg"></p>
 
 <button onclick="showCaptions()" font-size="16px"><i class="fa fa-closed-captioning fa-2x"></i></button>
 
@@ -61,8 +85,8 @@
 </section>
 </section>
 <section>
-<section id="slide-orge1e6321">
-<h2 id="orge1e6321">Overview</h2>
+<section id="slide-org772c1fd">
+<h2 id="org772c1fd">Overview</h2>
 <ul>
 <li>Mass balances
 <ul>
@@ -88,13 +112,13 @@ We start our discussion of balances with the mass balance.
 </section>
 </section>
 <section>
-<section id="slide-orgbce4a31">
-<h2 id="orgbce4a31">Tank filling &amp; draining</h2>
-<div class="outline-text-2" id="text-orgbce4a31">
+<section id="slide-org8e74594">
+<h2 id="org8e74594">Tank filling &amp; draining</h2>
+<div class="outline-text-2" id="text-org8e74594">
 </div>
 </section>
-<section id="slide-org2cf2406">
-<h3 id="org2cf2406">Tank filling</h3>
+<section id="slide-org01db642">
+<h3 id="org01db642">Tank filling</h3>
 <p>
 Mass balance:
 </p>
@@ -113,8 +137,8 @@ nil
 
 
 </section>
-<section id="slide-org42853cc">
-<h3 id="org42853cc">Determining the flow rate</h3>
+<section id="slide-org07d37f4">
+<h3 id="org07d37f4">Determining the flow rate</h3>
 <aside class="notes">
 <p>
 
@@ -152,8 +176,8 @@ V &= A h
 </aside>
 
 </section>
-<section id="slide-orga3110cd">
-<h3 id="orga3110cd">Time varying measurement</h3>
+<section id="slide-org470645a">
+<h3 id="org470645a">Time varying measurement</h3>
 <aside class="notes">
 <p>
 
@@ -205,8 +229,8 @@ time \(t\) by
 </aside>
 
 </section>
-<section id="slide-org9c06675">
-<h3 id="org9c06675">Determining the water level</h3>
+<section id="slide-org01d3122">
+<h3 id="org01d3122">Determining the water level</h3>
 <aside class="notes">
 <p>
 
@@ -269,8 +293,8 @@ The rate of
 </aside>
 
 </section>
-<section id="slide-orgfd1fdd2">
-<h3 id="orgfd1fdd2">Tank drainage</h3>
+<section id="slide-orgc541f58">
+<h3 id="orgc541f58">Tank drainage</h3>
 <aside class="notes">
 <p>
 
@@ -279,8 +303,8 @@ The rate of
 </aside>
 
 </section>
-<section id="slide-org175867f">
-<h3 id="org175867f"></h3>
+<section id="slide-org433da17">
+<h3 id="org433da17"></h3>
 <aside class="notes">
 <p>
 
@@ -289,8 +313,8 @@ The rate of
 </aside>
 
 </section>
-<section id="slide-orgf6974e9">
-<h3 id="orgf6974e9">Combining draining and filling</h3>
+<section id="slide-org238019b">
+<h3 id="org238019b">Combining draining and filling</h3>
 <p>
 Mass balance:
 </p>
@@ -306,13 +330,13 @@ Mass balance:
 </section>
 </section>
 <section>
-<section id="slide-orgb39376b">
-<h2 id="orgb39376b">Distributed flow</h2>
-<div class="outline-text-2" id="text-orgb39376b">
+<section id="slide-orgab09923">
+<h2 id="orgab09923">Distributed flow</h2>
+<div class="outline-text-2" id="text-orgab09923">
 </div>
 </section>
-<section id="slide-org4f6f2a0">
-<h3 id="org4f6f2a0">velocity and volumetric flowrate</h3>
+<section id="slide-org8028c66">
+<h3 id="org8028c66">velocity and volumetric flowrate</h3>
 <aside class="notes">
 <p>
 
@@ -338,19 +362,19 @@ dV = A dh
 </section>
 </section>
 <section>
-<section id="slide-org754e8f3">
-<h2 id="org754e8f3">Species balance</h2>
-<div class="outline-text-2" id="text-org754e8f3">
+<section id="slide-orge79528a">
+<h2 id="orge79528a">Species balance</h2>
+<div class="outline-text-2" id="text-orge79528a">
 </div>
 </section>
-<section id="slide-org7907a2b">
-<h3 id="org7907a2b"></h3>
+<section id="slide-org331ae17">
+<h3 id="org331ae17"></h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org6f32063">
-<h2 id="org6f32063">Summary</h2>
+<section id="slide-orga4411ae">
+<h2 id="orga4411ae">Summary</h2>
 <aside class="notes">
 nil
 </aside>
