--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-orgbd9229f">
-<h2 id="orgbd9229f">Navigation instructions</h2>
+<section id="slide-orgc575507">
+<h2 id="orgc575507">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,8 +75,8 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-org0955505">
-<h2 id="org0955505">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org24b986b">
+<h2 id="org24b986b">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -103,11 +103,12 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-org91d8f49" data-audio-src="python/">
-<h2 id="org91d8f49">Overview</h2>
+<section id="slide-org97f3602" data-audio-src="python/">
+<h2 id="org97f3602">Overview</h2>
 <ul class="fragment data-audio-src hello">
+<li>Jupyter notebooks</li>
 <li>Basic elements of the language</li>
-<li>CP101 worked examples and tutorial problems</li>
+<li>importing and using external libraries</li>
 
 </ul>
 
@@ -187,16 +188,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-org0368a4f" data-audio-src="python/title.mp3">
-<h3 id="org0368a4f">Python</h3>
+<section id="slide-org09282bc" data-audio-src="python/title.mp3">
+<h3 id="org09282bc">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org8678ca6">
-<h3 id="org8678ca6">Jupyter notebooks</h3>
+<section id="slide-org5bd233b">
+<h3 id="org5bd233b">Jupyter notebooks</h3>
 <ul>
 <li>Binder</li>
 <li>Google Colab</li>
@@ -232,24 +233,32 @@ mybinder.org, and the second method is with Google Colab.
 </aside>
 
 </section>
-<section id="slide-org186df01">
-<h3 id="org186df01">binder</h3>
+<section id="slide-orgf1b8905">
+<h3 id="orgf1b8905">binder</h3>
 
 </section>
-<section id="slide-orgd6a5636">
-<h3 id="orgd6a5636">Google Colab</h3>
+<section id="slide-org135234f">
+<h3 id="org135234f">Google Colab</h3>
+<ul>
+<li>opening notebook</li>
+<li>entering text</li>
+<li>running blocks</li>
+<li>saving/downloading file</li>
+<li>uploading file</li>
+
+</ul>
 
 
 </section>
 </section>
 <section>
-<section id="slide-orgc898540">
-<h2 id="orgc898540">Basics</h2>
-<div class="outline-text-2" id="text-orgc898540">
+<section id="slide-org7451ae4">
+<h2 id="org7451ae4">Basics</h2>
+<div class="outline-text-2" id="text-org7451ae4">
 </div>
 </section>
-<section id="slide-orge1506f5">
-<h3 id="orge1506f5">Python as a calculator</h3>
+<section id="slide-org49d1b60">
+<h3 id="org49d1b60">Python as a calculator</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -264,8 +273,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org0ce32c5">
-<h3 id="org0ce32c5">Example using variables</h3>
+<section id="slide-org6c9002e">
+<h3 id="org6c9002e">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="670" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -280,13 +289,13 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org3dd5c84">
-<h3 id="org3dd5c84">Variables: Numbers and strings</h3>
+<section id="slide-orgaa5e3f3">
+<h3 id="orgaa5e3f3">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org8fb2803">
-<h3 id="org8fb2803">Variables: Lists</h3>
+<section id="slide-org7557ec1">
+<h3 id="org7557ec1">Variables: Lists</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -294,15 +303,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org0537bc8">
-<h3 id="org0537bc8">Variables: Dictionaries</h3>
+<section id="slide-org1455cf9">
+<h3 id="org1455cf9">Variables: Dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29339&amp;code=de~TDs6xrAtA4CCHNgzdMWVeqbpLI9b" frameborder="0" allowfullscreen></iframe>
 
 
 
 </section>
-<section id="slide-org6bf8784">
-<h3 id="org6bf8784">Example using dictionaries</h3>
+<section id="slide-orgad53171">
+<h3 id="orgad53171">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -310,28 +319,20 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org3123f87">
-<h3 id="org3123f87">More advanced use of dictionaries</h3>
+<section id="slide-org3169ed7">
+<h3 id="org3169ed7">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="630" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org880791a">
-<h3 id="org880791a">Functions</h3>
+<section id="slide-org5d59e59">
+<h3 id="org5d59e59">Functions</h3>
 <p>
 See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_functions.ipynb">colab</a>.
 </p>
 
-<div>
-Please see the
-<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_functions.ipynb">
-Jupyter notebook
-</a>
-for more details.
-</div>
-
 </section>
-<section id="slide-orge0c9ed2">
-<h3 id="orge0c9ed2">Conditionals</h3>
+<section id="slide-orge47d03d">
+<h3 id="orge47d03d">Conditionals</h3>
 <p>
 See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_conditionals.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_conditionals.ipynb">colab</a>.
 </p>
@@ -339,8 +340,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-org7d3dcfe">
-<h2 id="org7d3dcfe">Importing libraries</h2>
+<section id="slide-org9283f4e">
+<h2 id="org9283f4e">Importing libraries</h2>
 <ul>
 <li>Matplotlib</li>
 <li>Numpy</li>
@@ -364,8 +365,8 @@ There are a lo
 </aside>
 
 </section>
-<section id="slide-org7a2bff7">
-<h3 id="org7a2bff7">numpy</h3>
+<section id="slide-orgbd3a413">
+<h3 id="orgbd3a413">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -396,8 +397,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-org1e622d3">
-<h3 id="org1e622d3">importing numpy</h3>
+<section id="slide-org16e6b96">
+<h3 id="org16e6b96">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -425,8 +426,8 @@ within your program.
 </aside>
 
 </section>
-<section id="slide-org2f404f1">
-<h3 id="org2f404f1">matplotlib / pylab</h3>
+<section id="slide-orgdd3f71f">
+<h3 id="orgdd3f71f">matplotlib / pylab</h3>
 <ul>
 <li><a href="https://matplotlib.org/tutorials/introductory/pyplot.html">Pyplot tutorial</a></li>
 <li>see the notebook</li>
@@ -453,8 +454,8 @@ nil
 </aside>
 
 </section>
-<section id="slide-orgcceeb2d">
-<h3 id="orgcceeb2d">scipy</h3>
+<section id="slide-orgab7fdf2">
+<h3 id="orgab7fdf2">scipy</h3>
 <ul>
 <li>root finders</li>
 <li>non-linear equation solver: <code>fsolve</code></li>
@@ -464,8 +465,8 @@ nil
 </ul>
 
 </section>
-<section id="slide-orgef955df">
-<h3 id="orgef955df">Examples of using <code>fsolve</code></h3>
+<section id="slide-org5e04775">
+<h3 id="org5e04775">Examples of using <code>fsolve</code></h3>
 <ul>
 <li>CP101: Example 7.5 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_solver.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_solver.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1.ipynb">colab</a>)</li>
@@ -476,8 +477,8 @@ nil
 
 
 </section>
-<section id="slide-org8fb29bf">
-<h3 id="org8fb29bf">Sympy</h3>
+<section id="slide-org968c342">
+<h3 id="org968c342">Sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -497,13 +498,13 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-orgddd0e83">
-<h2 id="orgddd0e83">Further resources</h2>
-<div class="outline-text-2" id="text-orgddd0e83">
+<section id="slide-org276e0d8">
+<h2 id="org276e0d8">Further resources</h2>
+<div class="outline-text-2" id="text-org276e0d8">
 </div>
 </section>
-<section id="slide-org5f77708">
-<h3 id="org5f77708">Installation</h3>
+<section id="slide-org18d4041">
+<h3 id="org18d4041">Installation</h3>
 <p>
 If you are interested in installing 
 [[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
@@ -530,8 +531,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-orge1b4089">
-<h2 id="orge1b4089">Summary</h2>
+<section id="slide-org4be5917">
+<h2 id="org4be5917">Summary</h2>
 <aside class="notes">
 nil
 </aside>
