--- a/slides/python_notes.html
+++ b/slides/python_notes.html
@@ -47,8 +47,8 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org1df26c6">
-<h2 id="org1df26c6">Navigation instructions</h2>
+<section id="slide-orgedbb58b">
+<h2 id="orgedbb58b">Navigation instructions</h2>
 <ul>
 <li>Press <i class="fa fa-bars"></i> at the bottom
 left corner of the page to open a menu.
@@ -75,12 +75,10 @@ the bottom right corner of the page to navigate the presentation.</li>
 </section>
 </section>
 <section>
-<section id="slide-orge6d656f">
-<h2 id="orge6d656f">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orga5e6211" data-audio-src="python/title.ogg">
+<h2 id="orga5e6211">CP213: Applied mathematics and problem solving</h2>
 <h2>Python and its applications</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
-
-<p class="fragment" data-audio-src="python/title.ogg"></p>
 
 <button onclick="showCaptions()" font-size="16px"><i class="fa fa-closed-captioning fa-2x"></i></button>
 
@@ -103,8 +101,8 @@ simple chemical engineering problems.
 </section>
 </section>
 <section>
-<section id="slide-orgde0a094" data-audio-src="python/">
-<h2 id="orgde0a094">Overview</h2>
+<section id="slide-orgf2d8ce6" data-audio-src="python/">
+<h2 id="orgf2d8ce6">Overview</h2>
 <ul class="fragment data-audio-src hello">
 <li>Jupyter notebooks</li>
 <li>Basic elements of the language</li>
@@ -188,16 +186,16 @@ to as far you want to go.
 
 
 </section>
-<section id="slide-org36dc6ea" data-audio-src="python/title.mp3">
-<h3 id="org36dc6ea">Python</h3>
+<section id="slide-org3c34091" data-audio-src="python/title.mp3">
+<h3 id="org3c34091">Python</h3>
 <p class="fragment" data-audio-text="This is a test.">
 </p>
 
 
 
 </section>
-<section id="slide-org6e0d74f">
-<h3 id="org6e0d74f">Jupyter notebooks</h3>
+<section id="slide-org9dac84e">
+<h3 id="org9dac84e">Jupyter notebooks</h3>
 <ul>
 <li>Binder</li>
 <li>Google Colab</li>
@@ -233,8 +231,8 @@ mybinder.org, and the second method is with Google Colab.
 </aside>
 
 </section>
-<section id="slide-org5ee0cd6">
-<h3 id="org5ee0cd6">binder</h3>
+<section id="slide-org4e1ddc4">
+<h3 id="org4e1ddc4">binder</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29814&amp;code=d3~fUfZO0i6BIXbLrG8LPTO8TxihQo0" frameborder="0" allowfullscreen></iframe>
 
 
@@ -243,8 +241,8 @@ To follow along, open the Jupyter notebook: <a href="https://mybinder.org/v2/gh/
 </p>
 
 </section>
-<section id="slide-org009c02d">
-<h3 id="org009c02d">Google Colab</h3>
+<section id="slide-orgc93e673">
+<h3 id="orgc93e673">Google Colab</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29815&amp;code=dd~rQcuNtpfbWJpjOH07dDfsrn3beyJ" frameborder="0" allowfullscreen></iframe>
 
 
@@ -255,13 +253,13 @@ To follow along, open the Jupyter notebook: <a href="https://colab.research.goog
 </section>
 </section>
 <section>
-<section id="slide-org768a38b">
-<h2 id="org768a38b">Basics</h2>
-<div class="outline-text-2" id="text-org768a38b">
+<section id="slide-org313e7c9">
+<h2 id="org313e7c9">Basics</h2>
+<div class="outline-text-2" id="text-org313e7c9">
 </div>
 </section>
-<section id="slide-org21e600f">
-<h3 id="org21e600f">Python as a calculator</h3>
+<section id="slide-org3bc5f28">
+<h3 id="org3bc5f28">Python as a calculator</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29103&amp;code=cT~vMz6ypmaysddJKeMFJCSsrvT7UEV" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/eraiBe2SiEk?start=5" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -276,8 +274,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-orgc1611b2">
-<h3 id="orgc1611b2">Example using variables</h3>
+<section id="slide-org8994f66">
+<h3 id="org8994f66">Example using variables</h3>
 <div>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29111&amp;code=cD~cHPkoDRjmze5AKdfGOIjDPWQ7Rny" frameborder="0" allowfullscreen></iframe>
 <!---iframe width="560" height="315" src="https://www.youtube.com/embed/16Yaz4oIkhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe--->
@@ -292,13 +290,13 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 
 
 </section>
-<section id="slide-org2c6afdd">
-<h3 id="org2c6afdd">Variables: Numbers and strings</h3>
+<section id="slide-org746c4eb">
+<h3 id="org746c4eb">Variables: Numbers and strings</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29216&amp;code=d5~ijLchTEOwGJMFWGf7RFQxZ9ZBPq8" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org25ff8c6">
-<h3 id="org25ff8c6">Variables: Lists</h3>
+<section id="slide-org073203f">
+<h3 id="org073203f">Variables: Lists</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="1120" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29236&amp;code=cL~mfgCUbBNSZdDeCdWGhFAybiLyywg" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -306,15 +304,15 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org5ece687">
-<h3 id="org5ece687">Variables: Dictionaries</h3>
+<section id="slide-orgc24ac77">
+<h3 id="orgc24ac77">Variables: Dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29339&amp;code=de~TDs6xrAtA4CCHNgzdMWVeqbpLI9b" frameborder="0" allowfullscreen></iframe>
 
 
 
 </section>
-<section id="slide-orgda4461b">
-<h3 id="orgda4461b">Example using dictionaries</h3>
+<section id="slide-org633aecd">
+<h3 id="org633aecd">Example using dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29221&amp;code=ct~RXSPpeK9MhrYbicpud7Bk9fTexcM" frameborder="0" allowfullscreen></iframe>
 
 <p>
@@ -322,13 +320,13 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-org8ac11dd">
-<h3 id="org8ac11dd">More advanced use of dictionaries</h3>
+<section id="slide-orgb18dfe7">
+<h3 id="orgb18dfe7">More advanced use of dictionaries</h3>
 <iframe allow="autoplay; fullscreen" height="500" width="500" src="https://ls-video2.ces.strath.ac.uk/Embed.aspx?id=29219&amp;code=de~TDs6xoAsA0CIHNgAdMWXejboLO9b" frameborder="0" allowfullscreen></iframe>
 
 </section>
-<section id="slide-org49d5988">
-<h3 id="org49d5988">Functions</h3>
+<section id="slide-org184bc1e">
+<h3 id="org184bc1e">Functions</h3>
 
 
 <p>
@@ -336,8 +334,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </p>
 
 </section>
-<section id="slide-orgced5aad">
-<h3 id="orgced5aad">Conditionals</h3>
+<section id="slide-orge57e73e">
+<h3 id="orge57e73e">Conditionals</h3>
 
 
 <p>
@@ -347,8 +345,8 @@ See the Jupyter notebook: <a href="https://mybinder.org/v2/gh/mjksill/CP213-onli
 </section>
 </section>
 <section>
-<section id="slide-orgb9012f6">
-<h2 id="orgb9012f6">Importing libraries</h2>
+<section id="slide-org0d6c823">
+<h2 id="org0d6c823">Importing libraries</h2>
 <ul>
 <li>Matplotlib</li>
 <li>Numpy</li>
@@ -366,14 +364,33 @@ for more details.
 
 <aside class="notes">
 <p>
-There are a lo
+Previously, we mentioned that Python could be used as a calculator.
+This is true, however, if you work with plain Python, you will notice
+that there are several functions missing from it that are present in
+modern calculators, such as logarithms, trigonometric functions,
+hyperbolic trigonometric functions, etc.  and special constants, like
+pi and Euler's number.
 </p>
+
+<p>
+While these features are not in Python by default, we can import them
+from external libraries, which are collections of functions written by
+others.  Some key libraries that we will be using throughout this
+module, and that you will find extremely useful, include:
+</p>
+<ul>
+<li>Numpy</li>
+<li>Matplotlib / Pylab</li>
+<li>Scipy</li>
+<li>Sympy</li>
+
+</ul>
 
 </aside>
 
 </section>
-<section id="slide-org9bb897e">
-<h3 id="org9bb897e">numpy</h3>
+<section id="slide-orgfd52ba0">
+<h3 id="orgfd52ba0">numpy</h3>
 <ul>
 <li>mathematical functions
 <ul>
@@ -404,8 +421,8 @@ from Python.  For example, if you want to take the sine of a
 </aside>
 
 </section>
-<section id="slide-org617cd38">
-<h3 id="org617cd38">importing numpy</h3>
+<section id="slide-orgfb7d923">
+<h3 id="orgfb7d923">importing numpy</h3>
 <div class="org-src-container">
 
 <pre  class="src src-python"><code trim><span style="color: #00ffff;">import</span> numpy
@@ -430,16 +447,22 @@ functions within the main library are loaded and can be accessed from
 within your program.
 </p>
 
+<p>
+sometimes a library is further subdivided into sublibraries.  In this
+case, we can call a specific function within 
+</p>
+
 </aside>
 
 </section>
-<section id="slide-org7541d60">
-<h3 id="org7541d60">matplotlib / pylab</h3>
+<section id="slide-orgad0d16a">
+<h3 id="orgad0d16a">matplotlib / pylab</h3>
 <ul>
 <li><a href="https://matplotlib.org/tutorials/introductory/pyplot.html">Pyplot tutorial</a></li>
-<li>see the notebook</li>
+<li>Basic introduction <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_plotting.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_plotting.ipynb">colab</a></li>
 
 </ul>
+
 
 <div class="org-src-container">
 
@@ -449,6 +472,8 @@ within your program.
 <span style="color: #eedd82;">x_data</span> = np.arange(0.0, 1.0, 0.01)
 <span style="color: #eedd82;">y_data</span> = [np.sin(x) <span style="color: #00ffff;">for</span> x <span style="color: #00ffff;">in</span> x_data]
 
+plt.plot(x_data, y_data)
+
 plt.show()
 
 </code></pre>
@@ -457,35 +482,63 @@ plt.show()
 
 
 <aside class="notes">
-nil
+<p>
+The library Matplotlib enables us to create graphs to visualize data.
+To see some examples of the types of figures that we can create using
+Matplotlib, see the <a href="https://matplotlib.org/3.1.1/gallery/index.html">gallery page</a>.  This not only shows you what is
+possible, but it also gives you the Python code used to generate the
+figures.
+</p>
+
+<p>
+In this notebook, we will be focusing mainly on creating scatter
+plots.
+</p>
+
+
+
+<ul>
+<li>plot</li>
+<li>show</li>
+<li>label</li>
+<li>legend</li>
+
+</ul>
+
 </aside>
 
 </section>
-<section id="slide-org8a65e36">
-<h3 id="org8a65e36">scipy</h3>
+<section id="slide-orgbc42fa7">
+<h3 id="orgbc42fa7">scipy</h3>
 <ul>
-<li>root finders</li>
-<li>non-linear equation solver: <code>fsolve</code></li>
+<li>non-linear equation solver: <code>fsolve</code> (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_solver.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_solver.ipynb">colab</a>)</li>
 <li>numerical integration: <code>quad</code></li>
 <li>numerical solvers for coupled differential equations: <code>odeint</code></li>
 
 </ul>
 
 </section>
-<section id="slide-org6478ab1">
-<h3 id="org6478ab1">Examples of using <code>fsolve</code></h3>
+<section id="slide-org1255a1f">
+<h3 id="org1255a1f">Examples of using <code>fsolve</code></h3>
 <ul>
-<li>CP101: Example 7.5 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/python_solver.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/python_solver.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1.ipynb">colab</a>)</li>
-<li>CP101: Tutorial 17, Question 1 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb">colab</a>)</li>
+<li>CP101: Tutorial 17, Question 1, alternate solution (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q1-2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q1-2.ipynb">colab</a>)</li>
 <li>CP101: Tutorial 17, Question 2 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101T17Q2.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101T17Q2.ipynb">colab</a>)</li>
+<li>CP101: Example 7.5 (<a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=notebooks/CP101E7.5.ipynb">binder</a> or <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/notebooks/CP101E7.5.ipynb">colab</a>)</li>
 
 </ul>
 
+<aside class="notes">
+<p>
+
+</p>
+
+</aside>
+
 
 </section>
-<section id="slide-org5595b5a">
-<h3 id="org5595b5a">Sympy</h3>
+<section id="slide-orga873a25">
+<h3 id="orga873a25">Sympy</h3>
 <ul>
 <li>symbolic algebra</li>
 <li>differentiation</li>
@@ -505,13 +558,13 @@ nil
 </section>
 </section>
 <section>
-<section id="slide-org5d30870">
-<h2 id="org5d30870">Further resources</h2>
-<div class="outline-text-2" id="text-org5d30870">
+<section id="slide-org6465fc6">
+<h2 id="org6465fc6">Further resources</h2>
+<div class="outline-text-2" id="text-org6465fc6">
 </div>
 </section>
-<section id="slide-orgbd7c640">
-<h3 id="orgbd7c640">Installation</h3>
+<section id="slide-org3541576">
+<h3 id="org3541576">Installation</h3>
 <p>
 If you are interested in installing 
 [[<a href="https://www.anaconda.com/products/individual">https://www.anaconda.com/products/individual</a>]
@@ -538,8 +591,8 @@ If you are interested in installing Python
 </section>
 </section>
 <section>
-<section id="slide-org6b20e60">
-<h2 id="org6b20e60">Summary</h2>
+<section id="slide-org514f790">
+<h2 id="org514f790">Summary</h2>
 <aside class="notes">
 nil
 </aside>
